_sass/_article.sass
.index-articles
    margin: 0
    padding: 0 5px
    list-style: none

    .index-navigation
        position: relative
        text-align: center

    .nav-icon
        color: black
        opacity: 0.25
        position: absolute
        top: 0

        &:hover, &:active
            color: purple
            opacity: 1

    .nav-icon-up
        left: 0

    .nav-icon-down
        right: 0

    .index-header

        h2, h3
            display: inline-block
            opacity: 0.25

        h3
            font-size: 1.2em
            margin: 0

        &:hover, &:active
            text-decoration: none
            color: purple

.index-articles>*
    margin-top: 30vh
    margin-bottom: 30vh

article, .index-articles>*
    padding: 30px 30px
    background-color: rgba(255,255,255,0.8)
    border-radius: 40px
    line-height: 1.5em

    a
        color: purple

        h1, h2, h3, h4, h5
            color: black

            &:active, &:hover
                color: purple

    h1
        text-align: center
        margin-top: 0
        margin-bottom: 20px
        padding-bottom: 10px
        border-bottom: 2px rgba(100,100,100,0.3) solid
        a
            color: black


    h2
        text-align: center
        margin: 0

    h3
        font-size: 2em

    h4
        font-size: 1.75em

    h5
        font-size: 1.5em

    .post-meta
        opacity: 0.8

    .post-list
        margin: 15px 0
        list-style: none

        h3
            margin-bottom: 0

        li
            margin: 30px 0 15px


    h2, h3, h4, h5
        text-align: center
        margin: 25px 0

    p
        line-height: 1.7em
        margin: 0 0 20px

    li
        margin: 0 0 10px

article.article
    margin-top: 60px

#writing
    h3
        text-align: left

